# icloud-to-org-contacts

./: .gitignore  AGENTS.md  README.md  lifecycle.py  manifest.py  orgnote.py  pyproject.toml  vcard.py  vcf-to-org-contacts.py
docs/: reference.md  roadmap.md
lisp/: icloud-to-org-contacts.el
src/icloud_to_org_contacts/: __init__.py  authinfo.py  carddav.py  cli.py  lifecycle.py  manifest.py  orgnote.py  vcard.py
tests/: conftest.py  test_authinfo.py  test_carddav.py  test_cli_carddav.py  test_vcf_import.py
