[project]
name = "icloud-to-org-contacts"
version = "0.1.0"
description = "Import iCloud and vCard contacts into Org-mode contact notes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Sean McLaren" }
]
dependencies = [
  "defusedxml>=0.7.1",
  "requests>=2.32",
  "vobject>=0.9.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
icloud-to-org-contacts = "icloud_to_org_contacts.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
